# hrworks-sync

./: .gitignore  README.md  app.spec  pyproject.toml
.github/workflows/: build.yaml
example/: Arbeitszeiten.csv  Arbeitszeitenvorlage.xlsx  working-times.csv
hrworks_sync/: app.py
hrworks_sync/utils/: api.py  parser.py
